--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "ipython>=8.23.0",
     "ipykernel>=6.29.4",
     "nbformat>=5.10.4",
+    "kaleido>=0.2.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
