--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "nbformat>=5.10.4",
     "kaleido>=0.2.1",
     "rich>=13.7.1",
+    "icecream>=2.1.3",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
